--- a/trainingportal/public/index.html
+++ b/trainingportal/public/index.html
@@ -107,8 +107,8 @@ body {
 
 <div id="banner" class="jumbotron jumbotron-fluid transparent">
   <div class="container-fluid">
-    <h1 class="display-3">mmmmmmmmmmmmmmmmmmmmmWelcome to the &lt;Secure Coding Dojo/&gt;</h1>
-    <p class="lead">Hackers are looking for holes in your software. 
+    <h1 class="display-3">Welcome to the &lt;Secure Coding Dojo/&gt;</h1>
+    <p class="lead">Hackers dddddddd are looking for holes in your software. 
         Are you up to the challenge? Can you find the next security bug? 
         Can you implement the software defenses that will prevent the next 
         cyber-attack on your application? Be prepared! Join the Dojo! </p>
