sonarqube bugs fixed

--- a/trainingportal/static/activity.html
+++ b/trainingportal/static/activity.html
@@ -10,6 +10,7 @@
     </form>
 
     <table class="table table-striped">
+        <caption>table</caption>
         <thead>
         <tr>
             <th>Timestamp</th>
