--- a/trainingportal/static/dashboard.html
+++ b/trainingportal/static/dashboard.html
@@ -1,8 +1,11 @@
 <div class="container-fluid" ng-app="challengesApp" ng-controller="dashboardCtrl" data-ng-init="init()">
-    <table><tr valign="top">
-    <td style="padding:5px;width:50%">
+    <table>
+    <caption>table</caption>
+    <tr valign="top">
+    <th style="padding:5px;width:50%">
         <h3>Lessons</h3>
         <table class="table table-striped">
+            <caption>table</caption>
             <thead>
             <tr>
                 <th>Lesson Name</th>
@@ -21,6 +24,7 @@
     <td style="padding:5px;width:50%">
         <h3>Modules</h3>
         <table class="table table-striped">
+            <caption>table</caption>
             <thead>
             <tr>
                 <th>Module Name</th>
@@ -38,6 +42,7 @@
 
         <h3>Teams</h3>
         <table class="table table-striped">
+            <caption>table</caption>
             <thead>
             <tr>
                 <th>Team Name</th>
