--- a/trainingportal/static/main.html
+++ b/trainingportal/static/main.html
@@ -78,7 +78,7 @@
 
             <div class="alert alert-info" id="activityAlert" ng-if="showActivityMessage">
                     <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                    <b>Last activity:</b> {{latestActivityMessage}}
+                    <strong>Last activity:</strong> {{latestActivityMessage}}
             </div>
        
              <!-- This is where the main view goes -->
