--- a/trainingportal/public/locallogin.html
+++ b/trainingportal/public/locallogin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Secure Coding Dojo &gt; Local Login</title>
   <meta charset="utf-8">
@@ -112,7 +112,7 @@
     </div>
     <div class="form-group">
         <label for="captchaImg">Captcha image:</label>
-        <img src="captcha.png" id="loginCaptchaImg"/>
+        <img src="captcha.png" id="loginCaptchaImg" alt="captcha" />
         <a href="#">
             <span class="oi oi-reload" ng-click="refresh('loginCaptchaImg')"></span>
          </a>
@@ -169,7 +169,7 @@
             </div>
             <div class="form-group">
                 <label for="captchaImg">Captcha image:</label>
-                <img src="captcha.png" id="captchaImg"/>
+                <img src="captcha.png" id="captchaImg" alt="captcha"/>
                 <a href="#">
                     <span class="oi oi-reload" ng-click="refresh('captchaImg')"></span>
                  </a>
