--- a/trainingportal/static/leaderboard.html
+++ b/trainingportal/static/leaderboard.html
@@ -14,6 +14,7 @@
     <br>
     <br>
     <table class="table">
+        <caption>table</caption>
         <thead>
             <tr>
                 <th scope="col" ng-repeat="module in lbModules">{{module.name}} ({{module.percentageCompleted}}%)</th>
